--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -484,7 +484,8 @@ ul {
 }
 
 /* line 24, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_button.scss */
-.btn_1 {
+
+.btn_6{
   display: inline-block;
   padding: 9px 42px;
   border-radius: 50px;
@@ -504,6 +505,22 @@ ul {
 
 /* line 38, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_button.scss */
 .btn_3 {
+  display: inline-block;
+  padding: 9px 42px;
+  border-radius: 50px;
+  background-color: #ff3368;
+  border: 1px solid #ecfdff;
+  font-size: 15px;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 400;
+  box-shadow: -1.717px 8.835px 29.76px 2.24px rgba(255, 51, 104, 0.18);
+  border: 1px solid #ff3368;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.btn_10 {
   display: inline-block;
   padding: 9px 42px;
   border-radius: 50px;
