--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -589,6 +589,27 @@ ul {
   background-position: right center;
 }
 
+.btn_5 {
+  display: inline-block;
+  padding: 9px 42px;
+  border-radius: 50px;
+  background-color: #ff3368;
+  border: 1px solid #ecfdff;
+  font-size: 15px;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 400;
+  box-shadow: -1.717px 8.835px 29.76px 2.24px rgba(255, 51, 104, 0.18);
+  border: 1px solid #ff3368;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.btn_5:hover {
+  background-color: red;
+  color: #fff;
+}
+
 @media (max-width: 991px) {
   /* line 57, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_button.scss */
   .btn_2 {
